--- a/src/components/card-list/card-list.styles.css
+++ b/src/components/card-list/card-list.styles.css
@@ -5,3 +5,11 @@
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-gap: 20px;
 }
+
+
+@media(max-width:812px){
+  .card-list{
+    grid-template-columns: 1fr;
+    padding-bottom: 100px;
+  }
+  }
